8310027: Fix -Wconversion warnings in nmethod and compiledMethod related code